# tinnitus

./: .gitignore  CLAUDE.md  INSTALLATION.md  LICENSE  README.md  RELEASE_NOTES.md  main.py  pyproject.toml  spectral_noise.py
src/: generator.py  verify_notch.py
src/tinnitus/: cli.py  generator.py  verify_notch.py
tests/: test_args.py  test_cli.py  test_noise_characteristics.py  test_strategies.py  test_verify.py
