[project]
name = "tinnitus"
version = "0.1.0"
description = "Spectral noise generator with therapeutic notch filters"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.0.0",
    "pip>=25.3",
    "scipy>=1.10.0",
    "soundfile>=0.12.0",
]

authors = [
    { name = "Larry O'Brien", email="fasterprogrammers@gmail.com" }
]

[project.scripts]
tinnitus = "tinnitus.cli:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["src"] # Note: types in tests/ can be more trouble than they're worth

[[tool.mypy.overrides]]
module="soundfile"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]